# GOAT_AI

./: .editorconfig  .env.example  .gitattributes  .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  README.md  alembic.ini  app.py  deploy.ps1  deploy.sh  goat-ai-alt.service  goat-ai.service  phase0_check.sh  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-desktop-build.txt  requirements.txt  server.py
.github/: CODEOWNERS  pull_request_template.md
.streamlit/: config.toml
__tests__/: conftest.py  test_api_auth.py  test_api_authz.py  test_api_blackbox_contract.py  test_api_security.py  test_application_chat.py  test_application_history.py  test_application_ports_contract.py  test_application_workbench.py  test_architecture_boundaries.py  test_artifact_service.py  test_authorization_context.py  test_authorizer.py  test_authz_audit.py  test_backend_main_factory.py  test_background_jobs.py  test_backup_chat_db.py  test_build_desktop_sidecar.py  test_chart_compiler_v2.py  test_chat_capacity_guardrails.py  test_chat_options.py  test_chat_service.py  test_chat_stream_fake_llm.py  test_check_api_contract_sync.py  test_code_sandbox_execution_service.py  test_code_sandbox_provider.py  test_code_sandbox_runtime.py  test_credential_registry.py  test_db_migrations.py  test_desktop_release_governance.py  test_desktop_sidecar.py  test_desktop_smoke.py  test_docs_language.py  test_domain_phase15.py  (+52 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
(+773 files in other folders)
