[package]
name = "goat-ai-desktop"
version = "0.1.0"
description = "GOAT AI desktop shell"
authors = ["GOAT AI"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
